--- a/index.html
+++ b/index.html
@@ -36,17 +36,18 @@
         <div class="row">
             <div class="col-lg-6 col-xs-12">
                 <div class="card-wrapper gs_reveal ">
-                    <div class="custom-card-img">
-                        <img src="./assets/homepage/LizzyEd_JesMason_Feb2022.png" width="100%">
-                        <div class="light-dot"></div>
-                    </div>
-                    <div class="name-plate">
-                        <p class='card-title'>Editorial</p>
-                        <p class="card-byline">
-                            Words by ... <br>
-                            Visuals by ...
-                        </p>
-                    </div>
+                    <a href="./editorial.html">
+                        <div class="custom-card-img">
+                            <img src="./assets/homepage/LizzyEd_JesMason_Feb2022.png" width="100%">
+                            <div class="light-dot"></div>
+                        </div>
+                        <div class="name-plate">
+                            <p class='card-title'>Editorial: We are so gross up close</p>
+                            <p class="card-byline">
+                                Words by Elizabeth Sargeant <br>
+                                Visuals by ...
+                            </p>
+                        </div>
                 </div>
                 <div class="card-wrapper gs_reveal ">
                     <a href="./vulva-tastic-listicle.html">
@@ -64,17 +65,19 @@
                     </a>
                 </div>
                 <div class="card-wrapper gs_reveal ">
-                    <div class="custom-card-img">
-                        <img src="./assets/homepage/BodyHorror_March2022.png" width="100%">
-                        <div class="light-dot"></div>
-                    </div>
-                    <div class="name-plate">
-                        <p class='card-title'>Best Canadian-made body horror films</p>
-                        <p class="card-byline">
-                            Words by ... <br>
-                            Visuals by ...
-                        </p>
-                    </div>
+                    <a href="./final-body-horror.html">
+                        <div class="custom-card-img">
+                            <img src="./assets/homepage/BodyHorror_March2022.png" width="100%">
+                            <div class="light-dot"></div>
+                        </div>
+                        <div class="name-plate">
+                            <p class='card-title'>Beginners Guide to Body Horror</p>
+                            <p class="card-byline">
+                                Words by Tyler Griffin <br>
+                                Visuals by ...
+                            </p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="col-lg-6 col-xs-12">
@@ -96,17 +99,19 @@
                         </a>
                     </div>
                     <div class="col-lg-6 col-xs-12 card-wrapper gs_reveal ">
-                        <div class="custom-card-img">
-                            <img src="./assets/homepage/Katya_Jian Von Maltman Esmane_March2022.png" width="100%">
-                            <div class="light-dot"></div>
-                        </div>
-                        <div class="name-plate">
-                            <p class='card-title'>Artist Profile: Meet Katya Iliana</p>
-                            <p class="card-byline">
-                                Words by ... <br>
-                                Visuals by ...
-                            </p>
-                        </div>
+                        <a href="./ryerson-media-production.html">
+                            <div class="custom-card-img">
+                                <img src="./assets/homepage/Katya_Jian Von Maltman Esmane_March2022.png" width="100%">
+                                <div class="light-dot"></div>
+                            </div>
+                            <div class="name-plate">
+                                <p class='card-title'>Artist Profile: Meet Katya Iliana</p>
+                                <p class="card-byline">
+                                    Words by ... <br>
+                                    Visuals by ...
+                                </p>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="card-wrapper gs_reveal">
