Update by lines

--- a/advice-column.html
+++ b/advice-column.html
@@ -95,7 +95,7 @@
                 <div class="article-bylines">
                     <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Abby Hughes
                         </span></h4>
-                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by ...
+                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by Laila Amer
                         </span></h4>
                 </div>
         </section>
