--- a/bodily-sound-effect.html
+++ b/bodily-sound-effect.html
@@ -91,7 +91,7 @@
                 <div class="article-bylines">
                     <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Alexandra Holyk
                         </span></h4>
-                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by ...
+                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by Vanessa Kauk
                         </span></h4>
                 </div>
         </section>
