--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <p class='card-title'>Editorial: We are so gross up close</p>
                             <p class="card-byline">
                                 Words by Elizabeth Sargeant <br>
-                                Visuals by ...
+                                Visuals by Jes Mason
                             </p>
                         </div>
                 </div>
@@ -59,7 +59,7 @@
                             <p class='card-title'>Vulva-tastic! Learning to love your labia</p>
                             <p class="card-byline">
                                 Words by Heidi Lee <br>
-                                Visuals by ...
+                                Visuals by Laila Amer
                             </p>
                         </div>
                     </a>
@@ -74,7 +74,7 @@
                             <p class='card-title'>Beginners Guide to Body Horror</p>
                             <p class="card-byline">
                                 Words by Tyler Griffin <br>
-                                Visuals by ...
+                                Visuals by Jes Mason
                             </p>
                         </div>
                     </a>
@@ -107,8 +107,8 @@
                             <div class="name-plate">
                                 <p class='card-title'>Artist Profile: Meet Katya Iliana</p>
                                 <p class="card-byline">
-                                    Words by ... <br>
-                                    Visuals by ...
+                                    Words by Serena Lopez <br>
+                                    Visuals by Jes Mason
                                 </p>
                             </div>
                         </a>
@@ -124,7 +124,7 @@
                             <p class='card-title'>How social media taught me to live with chronic illnesses</p>
                             <p class="card-byline">
                                 Words by Cassandra Earle <br>
-                                Visuals by ...
+                                Visuals by Laila Amer
                             </p>
                         </div>
                     </a>
@@ -140,7 +140,7 @@
                                 <p class='card-title'>Which bodily sound effect are you?</p>
                                 <p class="card-byline">
                                     Words by Alexandra Holyk <br>
-                                    Visuals by ...
+                                    Visuals by Vanessa Kauk
                                 </p>
                             </div>
                     </a>
@@ -155,7 +155,7 @@
                             <p class='card-title'>Pitman bros break their silence: 'Period sex is just gross'</p>
                             <p class="card-byline">
                                 Words by Maria Couto <br>
-                                Visuals by ...
+                                Visuals by Jes Mason
                             </p>
                         </div>
                     </a>
@@ -169,8 +169,8 @@
                 <div class="name-plate">
                     <p class='card-title'> A Trans Body is a Beautiful Body</p>
                     <p class="card-byline">
-                        Words by ... <br>
-                        Visuals by ...
+                        Words by Shadi B <br>
+                        Visuals by Jes Mason
                     </p>
                 </div>
             </div>
