--- a/period-sex.html
+++ b/period-sex.html
@@ -90,7 +90,7 @@
                 <div class="article-bylines">
                     <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Maria Couto
                         </span></h4>
-                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by ...
+                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by Jes Mason
                         </span></h4>
                 </div>
         </section>
