--- a/ryerson-media-production.html
+++ b/ryerson-media-production.html
@@ -93,7 +93,7 @@
                 <div class="article-bylines">
                     <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Words by Serena Lopez
                         </span></h4>
-                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by ...
+                    <h4 class='text-font-need-to-filled-in'><span class='text-font-overpass'>Photo by Jes Mason
                         </span></h4>
                 </div>
         </section>
