Update by lines

--- a/vulva-tastic-listicle.html
+++ b/vulva-tastic-listicle.html
@@ -58,6 +58,15 @@
             font-size: 20px;
             margin: 50px 0;
         }
+
+        .big-img {
+            width: 50%;
+        }
+        @media screen and (max-width: 767px) {
+            .big-img {
+                width: 100%;
+            }
+        }
     </style>
 
     <title>
@@ -136,16 +145,24 @@
                 In an effort to normalize conversations surrounding vulvas, Netflix has also teamed up with The Vulva
                 Gallery to create <a href="https://www.all-vulvas-are-beautiful.com/" target="blank">All Vulvas Are Beautiful</a>, an online art gallery, which is featured in Season 3,
                 Episode 3 of the comedy-drama series <em>Sex Education</em>.
+                <div style="text-align: center" class="gs_reveal">
+                    <img src="./assets/vulva-tastic-listicle/Screen Shot 2022-03-08 at 9.28.05 PM.png" class="float-center big-img">
+                    <cite>Photo credits: <a href="https://www.instagram.com/the.vulva.gallery/" target="blank">The Vulva Gallery</a> (@the.vulva.gallery)</cite>
+                </div>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <strong>Vagina Museum</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
-                Located in the U.K., <a href="" target="blank">Vagina Musuem</a> (@vagina_museum) is "the world's first bricks and mortar museum
+                Located in the U.K., <a href="https://www.instagram.com/vagina_museum/" target="blank">Vagina Musuem</a> (@vagina_museum) is "the world's first bricks and mortar museum
                 dedicated to the gynecological anatomy." Although you might not be able to visit the museum in person,
                 you can always take a look at their wide range of historic paintings featured on their Instagram page.
                 You can also visit one of their past exhibitions online: <a href="https://www.vaginamuseum.co.uk/exhibitions/pastexhibitions">Muff Busters: Vagina Myths and How To Fight
                 Them </a>.
+                <div style="text-align: center" class="gs_reveal">
+                    <img src="./assets/vulva-tastic-listicle/Screen Shot 2022-03-08 at 9.30.13 PM.png" class="float-center big-img">
+                    <cite>Photo credits: <a href="https://www.instagram.com/vagina_museum/" target="blank">Vagina Musuem</a> (@vagina_museum)</cite>
+                </div>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <strong>Vulvette Underground</strong>
@@ -159,6 +176,10 @@
                 "The vulva is the region of the body that is still the most taboo. It is an invitation to regain power
                 over their image and sexuality," the duo stated on their <a href="https://vulvetteunderground.com/a-propos/" target="blank">website</a>. Photos of the sculptures can be found
                 on their <a href="https://www.instagram.com/vulvetteunderground/" target="blank">Instagram</a> account.
+                <div style="text-align: center" class="gs_reveal">
+                    <img src="./assets/vulva-tastic-listicle/Screen Shot 2022-03-08 at 9.31.56 PM.png" class="float-center big-img">
+                    <cite>Photo credits: <a href="https://www.instagram.com/vulvetteunderground/" target="blank">Vulvette Underground</a> (@vulvetteunderground)</cite>
+                </div>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <strong>50 Vulvas Project</strong>
@@ -175,6 +196,10 @@
                 "Like all cosmetic surgery, it’s the individual's choice as to why they want to get [labiaplasty
                 cosmetic surgery], but also we must question more often WHY those people feel the need to pay thousands
                 to correct their genitalia, and break the stigma!" she wrote.
+                <div style="text-align: center" class="gs_reveal">
+                    <img src="./assets/vulva-tastic-listicle/Screen Shot 2022-03-08 at 9.34.02 PM.png" class="float-center big-img">
+                    <cite>Photo credits: <a href="https://www.instagram.com/p/COIlUoQAVRX/" target="blank">50 Vulvas Project</a> (@50vulvas)</cite>
+                </div>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <strong>Jensplaining</strong>
@@ -184,6 +209,10 @@
                 show answers common questions about your body that were never discussed in your high school's sex-ed
                 class. With her unique humour and expertise, Dr. Gunter guides us through misconceptions about sex and
                 people assigned female at birth in our society.
+                <div style="text-align: center" class="gs_reveal">
+                    <img src="./assets/vulva-tastic-listicle/Screen Shot 2022-03-08 at 9.37.36 PM.png" class="float-center big-img">
+                    <cite>Photo credits: <a href="https://gem.cbc.ca/media/jensplaining/s01" target="blank">CBC Gem</a></cite>
+                </div>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 Episode nine talks specifically about the vagina and calls out "wellness products" that try to profit
