Update by lines

--- a/index.html
+++ b/index.html
@@ -176,11 +176,12 @@
             </div>
         </div>
         <div class="bottom-img gs_reveal">
-            <img src="./assets/Silhouette_final_LailaAmer_Mar29_.png" width="100%">
+            <img src="./assets/Silhouette_final_LailaAmer_Mar9.png" width="100%">
         </div>
     </section>
-
-    <section class="credits ">
+    <br>
+    <section class="credits container" style="text-align: center">
+        <img src="./assets/CREDITS.png" width="100%">
     </section>
 
     <!-- <footer>
