Update by lines

--- a/period-sex.html
+++ b/period-sex.html
@@ -131,10 +131,12 @@
                 “I mean you saw how crazy those girls got when we said how gross it is, now imagine how much worse it
                 could’ve gotten if they were all on their periods? Have you ever heard how female praying mantises bite the
                 heads off the males after they bang? These chicks aren’t that different.”
+                
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
 
                 Laughs emmenated from the three as they exchanged high fives, exposing their matching yellow armpit stains.
+                <img src="./assets/period-sex/Pitman_1_March2022.png" class="float-center" width="150px">
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
 
