--- a/index.html
+++ b/index.html
@@ -162,9 +162,16 @@
                 </div>
             </div>
             <div class="card-wrapper gs_reveal ">
-                <div class="custom-card-img">
-                    <img src="./assets/homepage/ShadiB_March2022.png" width="100%">
-                    <div class="light-dot"></div>
+
+                <div class="custom-card-img with-yt">
+                    <img src="./assets/homepage/ShadiB_March2022.png" width="100%" onclick="showVideo()" id="yt-img-cover">
+                    <div class="yt-video" id="yt-video">
+                        <iframe width="100%" height="100%" src="https://www.youtube-nocookie.com/embed/NpA_UPlC1W0"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                    <div class="light-dot" id="video-light-dot"></div>
                 </div>
                 <div class="name-plate">
                     <p class='card-title'> A Trans Body is a Beautiful Body</p>
@@ -173,6 +180,8 @@
                         Visuals by Jes Mason
                     </p>
                 </div>
+
+
             </div>
         </div>
         <div class="bottom-img gs_reveal">
