Update by lines

--- a/final-body-horror.html
+++ b/final-body-horror.html
@@ -11,14 +11,14 @@
     <meta name="twitter:title" content="Beginners Guide to Body Horror" />
     <meta name="twitter:description" content="So gory it’s good" />
     <meta name="twitter:image:src"
-        content="https://thebodyissue.theeyeopener.com/assets/final-body-horror/" />
+        content="https://thebodyissue.theeyeopener.com/assets/final-body-horror/BodyHorror_March2022.png" />
 
     <meta property="og:url" content="" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Beginners Guide to Body Horror" />
     <meta property="og:description" content="So gory it’s good" />
     <meta property="og:image"
-        content="https://thebodyissue.theeyeopener.com/assets/final-body-horror/" />
+        content="https://thebodyissue.theeyeopener.com/assets/final-body-horror/BodyHorror_March2022.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
@@ -42,7 +42,7 @@
 
     <style>
         .article-head-img {
-            background-image: url(./assets/final-body-horror/);
+            background-image: url(./assets/final-body-horror/BodyHorror_March2022.png);
             width: 100%;
             height: 70vh;
             background-position: center;
@@ -129,6 +129,7 @@
                 <strong>Videodrome (1983) dir. by David Cronenberg</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/final-body-horror/MovieListicle_videodrome_March2022.png" width="150px" class="float-right">
                 Canadian filmmaker David Cronenberg is undeniably the master of body horror, with numerous iconic
                 entries into the genre. But, to me, none represent his mastery and creativity as well as <em>Videodrome</em>. The
                 film was shot but also takes place in Toronto, and follows Max, the president of a local TV station that
@@ -143,6 +144,7 @@
                 unhinged, surrealist flick. <em>Long live the new flesh</em>.
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/final-body-horror/MovieListicle_bloodquantum_March2022.png" width="150px" class="float-left">
                 <strong>Blood Quantum (2019) dir. by Jeff Barnaby</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
@@ -156,7 +158,10 @@
                 highlighting how diverse voices can breathe new life into a tired genre. And the lesson? White people
                 fuck everything up.
             </p>
+            <br>
+            <br>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/final-body-horror/MovieListicle_raw_March2022.png" width="150px" class="float-right">
                 <strong>Raw (2016) dir. by Julia Ducournau</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
@@ -172,6 +177,8 @@
                 girlboss winning.
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/final-body-horror/MovieListicle_hellraiser_March2022.png" width="150px" class="float-left">
+
                 <strong>Hellraiser (1987) dir. by Clive Barker</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
@@ -189,6 +196,8 @@
                 villains to not just represent body horror but also administer it.
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/final-body-horror/MovieListicle_eraserhead_March2022.png" width="150px" class="float-right">
+
                 <strong>Eraserhead (1977) dir. by David Lynch</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
@@ -207,6 +216,8 @@
                 sitting through her corrective surgeries.
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/final-body-horror/MovieListicle_thething_March2022.png" width="150px" class="float-left">
+
                 <strong>The Thing (1982) dir. by John Carpenter</strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
