Update by lines

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="./stylesheets/common.css">
     <link rel="stylesheet" href="./stylesheets/index.css">
     <link rel="stylesheet" href="./stylesheets/font.css">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="./assets/favicon.ico">
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
 </head>
 
 <body onload="pageLoader()">
