Update by lines

--- a/advice-column.html
+++ b/advice-column.html
@@ -134,9 +134,9 @@
             </p>
 
             <p class='text-font-need-to-filled-in gs_reveal'>
-                <strong>
+                <br><strong>
                 Older people seem to have a certain smell—not a bad smell, but just something characteristic of elderly
-                people. What is that and why does it happen as humans age? — </strong><em>Grandma Sniffer</em>
+                people. What is that and why does it happen as humans age? — </strong><em>Grandma Sniffer</em> <br><br>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
 
@@ -151,7 +151,7 @@
 
             <p class='text-font-need-to-filled-in gs_reveal'>
 
-                <strong>Why do people have ear wax, and where does it come from?</strong> — <em>Q-Tip Queen</em>
+                <br><strong>Why do people have ear wax, and where does it come from?</strong> — <em>Q-Tip Queen</em> <br><br>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
 
@@ -171,9 +171,9 @@
             </p>
 
             <p class='text-font-need-to-filled-in gs_reveal'>
-                <strong>
+                <br><strong>
                 Sometimes, people get throat gurgles instead of burps that are more involuntary. Are those basically
-                slow-release burps? Why do we get them?</strong> — <em>Gassy Cassie</em>
+                slow-release burps? Why do we get them?</strong> — <em>Gassy Cassie</em> <br><br>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
 
@@ -188,10 +188,10 @@
             </p>
 
             <p class='text-font-need-to-filled-in gs_reveal'>
-                <strong>
+                <br><strong>
                 Why do some women experience so much pain with their periods? I understand that cramps happen because
                 the uterus is contracting to push out blood and uterus lining, but how is it that such a routine bodily
-                function can be so intensely painful for some people?</strong> — <em>PMS Princess</em>
+                function can be so intensely painful for some people?</strong> — <em>PMS Princess</em> <br><br>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
 
