--- a/final-body-horror.html
+++ b/final-body-horror.html
@@ -126,7 +126,7 @@
                 potency. Happy viewing!
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
-                <strong>Videodrome (1983) dir. by David Cronenberg</strong>
+                <strong><em>Videodrome (1983) dir. by David Cronenberg</em></strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <img src="./assets/final-body-horror/MovieListicle_videodrome_March2022.png" width="150px" class="float-right">
@@ -145,7 +145,7 @@
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <img src="./assets/final-body-horror/MovieListicle_bloodquantum_March2022.png" width="150px" class="float-left">
-                <strong>Blood Quantum (2019) dir. by Jeff Barnaby</strong>
+                <strong><em>Blood Quantum (2019) dir. by Jeff Barnaby</em></strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <em>Blood Quantum</em> had its premiere at the Ryerson Theatre during the 2019 Toronto International Film
@@ -162,7 +162,7 @@
             <br>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <img src="./assets/final-body-horror/MovieListicle_raw_March2022.png" width="150px" class="float-right">
-                <strong>Raw (2016) dir. by Julia Ducournau</strong>
+                <strong><em>Raw (2016) dir. by Julia Ducournau</em></strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 Have any of you vegetarians out there ever wanted to let loose and eat a juicy burger? Have your friends
@@ -179,7 +179,7 @@
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <img src="./assets/final-body-horror/MovieListicle_hellraiser_March2022.png" width="150px" class="float-left">
 
-                <strong>Hellraiser (1987) dir. by Clive Barker</strong>
+                <strong><em>Hellraiser (1987) dir. by Clive Barker</em></strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 Clive Barker’s ‘80s classic introduced us to the most iconic body-torturer of all-time which spawned an
@@ -198,7 +198,7 @@
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <img src="./assets/final-body-horror/MovieListicle_eraserhead_March2022.png" width="150px" class="float-right">
 
-                <strong>Eraserhead (1977) dir. by David Lynch</strong>
+                <strong><em>Eraserhead (1977) dir. by David Lynch</em></strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 I’m undoubtedly biased as David Lynch is my all-time favourite director, but it’s hard to dispute that
@@ -218,7 +218,7 @@
             <p class='text-font-need-to-filled-in gs_reveal'>
                 <img src="./assets/final-body-horror/MovieListicle_thething_March2022.png" width="150px" class="float-left">
 
-                <strong>The Thing (1982) dir. by John Carpenter</strong>
+                <strong><em>The Thing (1982) dir. by John Carpenter</em></strong>
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
                 John Carpenter’s 1982 masterpiece might just be the quintessential example of body horror at its best.
