Update by lines

--- a/ryerson-media-production.html
+++ b/ryerson-media-production.html
@@ -11,14 +11,14 @@
     <meta name="twitter:title" content="How Katya Ilina challenges gender norms through visual art" />
     <meta name="twitter:description"
         content="The third-year media production student is using her photography to reimagine the male and female body through a contemporary lens" />
-    <meta name="twitter:image:src" content="https://thebodyissue.theeyeopener.com/assets/ryerson-media-production/" />
+    <meta name="twitter:image:src" content="https://thebodyissue.theeyeopener.com/assets/homepage/Katya_Jian\ Von\ Maltman\ Esmane_March2022.png" />
 
     <meta property="og:url" content="" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="How Katya Ilina challenges gender norms through visual art" />
     <meta property="og:description"
         content="The third-year media production student is using her photography to reimagine the male and female body through a contemporary lens" />
-    <meta property="og:image" content="https://thebodyissue.theeyeopener.com/assets/ryerson-media-production/" />
+    <meta property="og:image" content="https://thebodyissue.theeyeopener.com/assets/homepage/Katya_Jian\ Von\ Maltman\ Esmane_March2022.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
@@ -42,7 +42,7 @@
 
     <style>
         .article-head-img {
-            background-image: url(./assets/ryerson-media-production/);
+            background-image: url(./assets/homepage/Katya_Jian\ Von\ Maltman\ Esmane_March2022.png);
             width: 100%;
             height: 70vh;
             background-position: center;
@@ -78,8 +78,8 @@
             <span class="home-page-link">The Body Issue</span>
         </a>
 
-        <section class="article-head-img gs_reveal">
-
+        <section class="gs_reveal">
+            <img src="./assets/homepage/Katya_Jian Von Maltman Esmane_March2022.png" width="100%">
         </section>
 
         <section class="article-header gs_reveal">
@@ -101,6 +101,7 @@
         <section class="article-content">
             <p class='text-font-need-to-filled-in gs_reveal'>
 
+                <img src="./assets/ryerson-media-production/Screen Shot 2022-03-09 at 1.05.46 AM.png" width="150px" class="float-left">
                 Before moving to Canada in 2019, Katya Ilina would spend her days taking photos of places and people
                 wherever she traveled. From encapsulating the flourishing nightlife scenes in Seoul to the street food
                 and crowded streets in Tokyo, Ilina used the camera to authentically frame the essence of her
@@ -125,11 +126,12 @@
                 world…now it's more of a creative tool.”
             </p>
             <blockquote>
-
+                
                 “[Photography] has more empty spaces for the viewer to project their experiences.”
             </blockquote>
             <p class='text-font-need-to-filled-in gs_reveal'>
-
+                
+                <img src="./assets/ryerson-media-production/Screen Shot 2022-03-09 at 1.07.39 AM.png" width="150px" class="float-right">
                 Though she doesn’t think of photography as more unique than any other medium of storytelling like music
                 or film, Ilina wants to use her work to show positive expressions of femininity and identity without
                 telling the audience what to think.
@@ -165,6 +167,7 @@
                 on a project that plays on society’s archaic understanding of the male body and masculinity.
             </p>
             <p class='text-font-need-to-filled-in gs_reveal'>
+                <img src="./assets/ryerson-media-production/Screen Shot 2022-03-09 at 1.08.47 AM.png" width="150px" class="float-left">
 
                 “Traditionally, many male portraits depict men in positions of power, often in action,” said Ilina in an
                 interview with the <a
