Update by lines

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <div class="light-dot"></div>
                         </div>
                         <div class="name-plate">
-                            <p class='card-title'>Beginners Guide to Body Horror</p>
+                            <p class='card-title'>Beginner's guide to body horror</p>
                             <p class="card-byline">
                                 Words by Tyler Griffin <br>
                                 Visuals by Jes Mason
@@ -108,7 +108,7 @@
                                 <div class="light-dot"></div>
                             </div>
                             <div class="name-plate">
-                                <p class='card-title'>Artist Profile: Meet Katya Iliana</p>
+                                <p class='card-title'>Artist Profile: Meet Katya Ilina</p>
                                 <p class="card-byline">
                                     Words by Serena Lopez <br>
                                     Visuals by Jes Mason
@@ -180,7 +180,7 @@
                     <p class='card-title'> A Trans Body is a Beautiful Body</p>
                     <p class="card-byline">
                         Words by Shadi B <br>
-                        Visuals by Jes Mason
+                        Visuals by Sonia Khurana and Jes Mason
                     </p>
                 </div>
 
