--- a/final-body-horror.html
+++ b/final-body-horror.html
@@ -8,14 +8,14 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@The Eyeopener" />
-    <meta name="twitter:title" content="Beginners Guide to Body Horror" />
+    <meta name="twitter:title" content="Beginner's guide to body horror" />
     <meta name="twitter:description" content="So gory it’s good" />
     <meta name="twitter:image:src"
         content="https://thebodyissue.theeyeopener.com/assets/final-body-horror/BodyHorror_March2022.png" />
 
     <meta property="og:url" content="" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Beginners Guide to Body Horror" />
+    <meta property="og:title" content="Beginner's guide to body horror" />
     <meta property="og:description" content="So gory it’s good" />
     <meta property="og:image"
         content="https://thebodyissue.theeyeopener.com/assets/final-body-horror/BodyHorror_March2022.png" />
@@ -53,7 +53,7 @@
     </style>
 
     <title>
-        Beginners Guide to Body Horror
+        Beginner's guide to body horror
     </title>
 </head>
 
@@ -79,7 +79,7 @@
 
         <section class="article-header gs_reveal">
             <h1 class="article-title">
-                <h1 class='text-font-need-to-filled-in'>Beginners Guide to Body Horror
+                <h1 class='text-font-need-to-filled-in'>Beginner's guide to body horror
                 </h1>
 
                 <h2>So gory it’s good</h2>
